--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,26 @@
+annotated-types==0.7.0
+anyio==4.11.0
+beautifulsoup4==4.14.2
+blinker==1.9.0
+click==8.2.1
+colorama==0.4.6
+fastapi==0.117.1
+feedparser==6.0.12
 Flask==2.3.3
-gunicorn
+gunicorn==23.0.0
+h11==0.16.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+packaging==25.0
+pydantic==2.11.9
+pydantic_core==2.33.2
+sgmllib3k==1.0.0
+sniffio==1.3.1
+soupsieve==2.8
+starlette==0.48.0
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+uvicorn==0.37.0
+Werkzeug==3.1.3
